# Wifi-Manager

./: CMakeLists.txt  Main.qml  connection.cpp  connection.h  main.cpp
